# talent-tree-gen

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: configuration_generation.rs  defaults.rs  lib.rs  talent_configuration.rs  talent_encoding.rs  talent_string.rs  trait_tree.rs  trait_types.rs  version.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
