[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

reqwasm = "0.5.0"
serde = "1.0.219"
thiserror = "2.0.16"
regex = "1.11.2"
thaw = { version = "0.5.0-beta", features = [ "csr" ] }

[features]
default = ["csr"]
csr = ["leptos/csr"]
